# Marathon

./: .gitignore
Sprint00/t00/: CMakeLists.txt  helloTamriel.cpp
Sprint00/t01/: CMakeLists.txt  main.cpp  printDialog.cpp  printDialog.h
Sprint00/t02/: CMakeLists.txt  main.cpp  walletManager.cpp  walletManager.h
Sprint00/t03/: CMakeLists.txt  castSpells.cpp  main.cpp
Sprint00/t04/: CMakeLists.txt  main.cpp  referenceOrPointer.cpp  referenceOrPointer.h
Sprint00/t05/: CMakeLists.txt  main.cpp
Sprint00/t06/: CMakeLists.txt  main.cpp  meadSong.cpp  meadSong.h
Sprint00/t07/: CMakeLists.txt  main.cpp
Sprint01/t02/: CMakeLists.txt
Sprint01/t03/: CMakeLists.txt  main.cpp
Sprint01/t04/: main.cpp
Sprint01/t05/: main.cpp
Sprint02/t00/: 1  1_mod  CMakeLists.txt  main.cpp
Sprint02/t01/: 1  1_mod  CMakeLists.txt  main.cpp
Sprint02/t01/src/: CMakeLists.txt  countUniqueWords.cpp  countUniqueWords.h  creaneNameNewFile.cpp  openFile.cpp
Sprint02/t02/: CMakeLists.txt  main.cpp
Sprint02/t03/: CMakeLists.txt  main.cpp
Sprint03/t00/: a.out  main.cpp  templateAddition.h
Sprint03/t01/: a.out  main.cpp  (+1 more)
Sprint05/t04/app/: CMakeLists.txt  main.cpp
Sprint05/t04/app/src/: Axe.cpp  Axe.h  CMakeLists.txt  ImperialSoldier.cpp  ImperialSoldier.h  Soldier.cpp  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.cpp  Weapon.cpp  Weapon.h
Sprint08/t02/app/: CMakeLists.txt  main.cpp
Sprint08/t02/app/src/: UniversalReferenceDeterminant.h
t00/: CMakeLists.txt  main.cpp
t01/: CMakeLists.txt  main.cpp
t02/: main.cpp
t04/: CMakeLists.txt
t05/: CMakeLists.txt
(+173 files in other folders)
